--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -29,6 +29,6 @@
     background-size: cover;
 }
 
-.front-bg{
-  background-color: rgba(255, 255, 0, 0.767);  
+.login-front-bg{
+  background-color: rgba(172, 255, 47, 0.788);  
 }
